saslAuthenticate defaults to wrong database when using GSSAPI mechanism

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • None
    • Affects Version/s: 2.3.2
    • Component/s: None
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In a shell connected to subscriber edition 2.3.2 the following succeeds authentication but grants no privileges. The code is targeting the wrong userSource as a default. It should target $external, but currently targets $sasl.

      var mongo = db.getMongo();
      mongo.saslAuthenticate({mechanism: "GSSAPI", user: "user@DOMAIN.COM"});
      

      The following works, but shouldn't be required.

      var mongo = db.getMongo();
      mongo.saslAuthenticate({mechanism: "GSSAPI", user: "user@DOMAIN.COM", userSource: "$external"});
      

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Craig Wilson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: