SERVER-8305 Change default database for GSSAPI from $sasl to $external.